--- a/web/index.html
+++ b/web/index.html
@@ -4,40 +4,20 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/x-icon" href="checked.png">
+    <link rel="stylesheet" href="/web/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
     <title>To-do</title>
-    <link rel="icon" type="image/x-icon" href="checked.png" >
+
     <style>
-        .header>h1 {
-            margin-top: 0;
-            font-weight: lighter;
-        }
-
-        .allForms {
-            position: absolute;
-            display: block;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .--bs-primary {
-            margin-left: 10px;
-        }
-
         .todo {
             margin-left: 5px;
             top: 5px;
             font-size: xx-large;
         }
 
-        #editTask,
-        #deletetask {
-            width: 35px;
-        }
-
-        #taskadd{
+        #taskadd {
             width: 75%;
             left: 50%;
             transform: translate(-50%, 0);
@@ -62,23 +42,26 @@
     </div>
     <div id="taskadd" class="input-group mb-3">
         <input type="text" id="task-input" class="form-control" placeholder="Enter your tasks here" />
-        <button type="button" id="add-btn" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
-            <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
-          </svg></button>
+        <button type="button" id="add-btn" class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="24"
+                height="24" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                <path
+                    d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z" />
+            </svg></button>
     </div>
     <div id="tasktable" class="container-fluid mt-4">
-    <table class="table">
-        <thead>
-            <tr>
-                <th class="col-5">Tasks</th>
-                <th class="col-5">Edit</th>
-                <th class="col-2">Delete</th>
-            </tr>
-        </thead>
-        <tbody id="table-body">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th class="col-5">Tasks</th>
+                    <th class="col-5">Edit</th>
+                    <th class="col-2">Delete</th>
+                </tr>
+            </thead>
+            <tbody id="table-body">
 
-        </tbody>
-    </table></div>
+            </tbody>
+        </table>
+    </div>
     <script src="/eel.js"></script>
     <script src="jquery/jquery.js"></script>
     <script src="script.js"></script>
